package com.study.dto;

public record UserDto(long id, String email, String displayName) {}
